--- a/frontend/src/app/nav-bar/nav-bar.component.html
+++ b/frontend/src/app/nav-bar/nav-bar.component.html
@@ -1,25 +1,7 @@
 <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
   <div class="container">
 
-    <ul class="navbar-nav ml-auto">
-      <li class="nav-item dropdown">
-        <a>
-          <img src="https://s3.eu-central-1.amazonaws.com/bootstrapbaymisc/blog/24_days_bootstrap/fox.jpg" width="40" height="40" class="rounded-circle" alt="profile-image">
-        </a>
-      </li>
-    </ul>
-
-    <ng-container *ngIf="authService.isAuthenticated(); else login" class="mr-4">
-      <span style="color: white;">{{ authService.getUser()?.username }}</span>
-    </ng-container>
-
-    <ng-template #login>
-      <a class="btn btn-primary" routerLink="/login">Login</a>
-    </ng-template>
-
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-list-4" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+   
 
     <div class="collapse navbar-collapse" id="navbar-list-4">
     </div>
@@ -39,6 +21,25 @@
     </div>
     
     <button class="btn btn-danger btn-logout" (click)="logout()">Logout</button>
+   
 
+    <ng-container *ngIf="authService.isAuthenticated(); else login" class="mr-4">
+      <span style="color: white;">{{ authService.getUser()?.username }}</span>
+    </ng-container>
+
+    <ng-template #login>
+      <a class="btn btn-primary" routerLink="/login">Login</a>
+    </ng-template>
+
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-list-4" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item dropdown">
+        <a>
+          <img src="https://s3.eu-central-1.amazonaws.com/bootstrapbaymisc/blog/24_days_bootstrap/fox.jpg" width="40" height="40" class="rounded-circle" alt="profile-image" routerLink="/user-profile">
+        </a>
+      </li>
+    </ul>
   </div>
 </nav>
