--- a/frontend/src/app/create-resume/create-resume.component.html
+++ b/frontend/src/app/create-resume/create-resume.component.html
@@ -1,7 +1,8 @@
 <div class="container-fluid">
   <form #resumeForm="ngForm">
-    <nav class="navbar navbar-expand navbar-light  d-flex justify-content-between">
-      <div class="navbar-brand mb-0 h1 text-white">ONLINE RESUME BUILDER</div>
+    <nav class="navbar navbar-expand navbar-light d-flex justify-content-between">
+      <div class="container">
+        <div class="navbar-brand mb-0 h1 text-white">ONLINE RESUME BUILDER</div>
       <div class="col-md-6 button-wrapper">
         <div class="shadow-sm card action-buttons mb-4">
           <button class="btn btn-primary btn-md">
@@ -19,6 +20,7 @@
             </svg>
           </button>
         </div>
+      </div>
       </div>
     </nav>
     <div class="row">
