--- a/frontend/src/app/user-profile/user-profile.component.html
+++ b/frontend/src/app/user-profile/user-profile.component.html
@@ -38,15 +38,15 @@
         <label class="mb-0">Phone</label>
       </div>
       <div class="col-sm-9">
-        <input type="tel" class="form-control" [(ngModel)]="userData.phone" placeholder="Enter Phone">
+        <input type="tel" class="form-control" [(ngModel)]="userData.contactNo" placeholder="Enter Phone">
       </div>
     </div>
     <div class="row mb-3">
       <div class="col-sm-3">
-        <label class="mb-0">Mobile</label>
+        <label class="mb-0">Designation</label>
       </div>
       <div class="col-sm-9">
-        <input type="tel" class="form-control" [(ngModel)]="userData.mobile" placeholder="Enter Mobile">
+        <input type="tel" class="form-control" [(ngModel)]="userData.designation" placeholder="Enter Mobile">
       </div>
     </div>
     <div class="row mb-3">
@@ -62,6 +62,11 @@
         <button class="btn btn-primary" (click)="saveUserInfo()" >Save</button>
       </div>
     </div>
+    <!-- <div class="row">
+      <div class="col-sm-12 text-right">
+        <button class="btn btn-danger" (click)="deleteAccount()">Delete Account</button>
+      </div>
+    </div> -->
   </div>
 </div>
         </div>
