--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -18,6 +18,7 @@
       </form>
 
       <p class="mt-3">Don't have an account? <a routerLink="/signup">Sign up</a></p>
+      <p class="mt-3">Vist home page <a routerLink="/home" class="switch-tab">Home</a></p>
     </div>
     <div *ngIf="loginError" class="alert alert-danger">{{ loginError }}</div>
   </div>
