--- a/frontend/src/app/user-profile/user-profile.component.html
+++ b/frontend/src/app/user-profile/user-profile.component.html
@@ -62,11 +62,11 @@
         <button class="btn btn-primary" (click)="saveUserInfo()" >Save</button>
       </div>
     </div>
-    <!-- <div class="row">
+    <div class="row">
       <div class="col-sm-12 text-right">
         <button class="btn btn-danger" (click)="deleteAccount()">Delete Account</button>
       </div>
-    </div> -->
+    </div>
   </div>
 </div>
         </div>
